// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-password does not render if logged in 1`] = `
<sc-order-password enable-validation="" logged-in="" size="medium" style="display: none;">
  <mock:shadow-root></mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders 1`] = `
<sc-order-password enable-validation="" size="medium">
  <mock:shadow-root>
    <sc-password enablevalidation="" help="" name="password" showlabel="" size="medium" value=""></sc-password>
  </mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders confirmation if provided 1`] = `
<sc-order-password confirmation="" enable-validation="" size="medium">
  <mock:shadow-root>
    <sc-password confirmation="" confirmationhelp="Help" confirmationlabel="Label" confirmationplaceholder="Placeholder" enablevalidation="" help="" name="password" showlabel="" size="medium" value=""></sc-password>
  </mock:shadow-root>
</sc-order-password>
`;
